--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,14 @@ main {
   align-items: center;
   padding: 20px;
   gap: 12px;
+  /* background-image: url("https://www.wallpaperuse.com/wallp/95-957595_m.jpg");
+  background-size: cover; */
 }
+
 .card {
   width: 100%;
   max-width: 600px;
   padding: 12px;
   border: 1px solid black;
+  color: rgb(0, 0, 0);
 }
